--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.heading{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content:center;
+  font-family: sans-serif;
 }
-
-.App-link {
-  color: #61dafb;
+.display{
+  display: flex;
+  justify-content:center
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input{
+  display: flex;
+  justify-content:center
+}
+.butt-grid {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 1px;
+  column-gap: 1px;
+}
+button {
+  width: 50px;
+  height: 50px;
+  font-size: 20px;
+  margin: 1px;
+  padding: 1px;
+}
+.container{
+  display: flex;
+  justify-content:center;
+  margin: 50px;
+}
+.result{
+  position: fixed;
+  left:49%;
+  margin-top: 10px;
 }
